--- a/notebook/2. MODEL TRAINING.ipynb
+++ b/notebook/2. MODEL TRAINING.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "b080dfb2",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
     "import matplotlib.pyplot as plt \n",
     "import seaborn as sns\n",
     "# Modelling\n",
-    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "# from sklearn.metrics import mean_squared_error, r2_score\n",
     "from sklearn.neighbors import KNeighborsRegressor\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.ensemble import RandomForestRegressor,AdaBoostRegressor\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "e11c6255",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "e7e412a2",
    "metadata": {},
    "outputs": [
@@ -183,7 +183,7 @@
        "4                    none          76             78             75  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "56d72fde",
    "metadata": {},
    "outputs": [],
@@ -212,7 +212,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
+   "id": "d23ec8a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gender</th>\n",
+       "      <th>race_ethnicity</th>\n",
+       "      <th>parental_level_of_education</th>\n",
+       "      <th>lunch</th>\n",
+       "      <th>test_preparation_course</th>\n",
+       "      <th>reading_score</th>\n",
+       "      <th>writing_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group B</td>\n",
+       "      <td>bachelor's degree</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>none</td>\n",
+       "      <td>72</td>\n",
+       "      <td>74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group C</td>\n",
+       "      <td>some college</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>completed</td>\n",
+       "      <td>90</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group B</td>\n",
+       "      <td>master's degree</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>none</td>\n",
+       "      <td>95</td>\n",
+       "      <td>93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>male</td>\n",
+       "      <td>group A</td>\n",
+       "      <td>associate's degree</td>\n",
+       "      <td>free/reduced</td>\n",
+       "      <td>none</td>\n",
+       "      <td>57</td>\n",
+       "      <td>44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>male</td>\n",
+       "      <td>group C</td>\n",
+       "      <td>some college</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>none</td>\n",
+       "      <td>78</td>\n",
+       "      <td>75</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   gender race_ethnicity parental_level_of_education         lunch  \\\n",
+       "0  female        group B           bachelor's degree      standard   \n",
+       "1  female        group C                some college      standard   \n",
+       "2  female        group B             master's degree      standard   \n",
+       "3    male        group A          associate's degree  free/reduced   \n",
+       "4    male        group C                some college      standard   \n",
+       "\n",
+       "  test_preparation_course  reading_score  writing_score  \n",
+       "0                    none             72             74  \n",
+       "1               completed             90             88  \n",
+       "2                    none             95             93  \n",
+       "3                    none             57             44  \n",
+       "4                    none             78             75  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "cd613177",
    "metadata": {},
    "outputs": [
@@ -317,7 +433,7 @@
        "4                    none             78             75  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "f237ea14",
    "metadata": {},
    "outputs": [
@@ -364,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "924b7f9d",
    "metadata": {},
    "outputs": [],
@@ -374,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "ffc69816",
    "metadata": {},
    "outputs": [
@@ -395,7 +511,7 @@
        "Name: math_score, Length: 1000, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "1e290fe3",
    "metadata": {},
    "outputs": [],
@@ -431,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "9c68f99a",
    "metadata": {},
    "outputs": [],
@@ -441,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "72459f1d",
    "metadata": {},
    "outputs": [
@@ -451,7 +567,7 @@
        "(1000, 19)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "ed5c4e99",
    "metadata": {},
    "outputs": [
@@ -472,7 +588,7 @@
        "((800, 19), (200, 19))"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,6 +596,7 @@
    "source": [
     "# separate dataset into train and test\n",
     "from sklearn.model_selection import train_test_split\n",
+    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.2,random_state=42)\n",
     "X_train.shape, X_test.shape"
    ]
@@ -494,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "8c247bd0",
    "metadata": {},
    "outputs": [],
@@ -509,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "id": "79ccb8e7",
    "metadata": {
     "scrolled": false
@@ -521,14 +638,14 @@
      "text": [
       "Linear Regression\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 5.3243\n",
-      "- Mean Absolute Error: 4.2671\n",
-      "- R2 Score: 0.8743\n",
+      "- Root Mean Squared Error: 5.3402\n",
+      "- Mean Absolute Error: 4.2723\n",
+      "- R2 Score: 0.8735\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 5.3960\n",
-      "- Mean Absolute Error: 4.2158\n",
-      "- R2 Score: 0.8803\n",
+      "- Root Mean Squared Error: 5.4214\n",
+      "- Mean Absolute Error: 4.2253\n",
+      "- R2 Score: 0.8792\n",
       "===================================\n",
       "\n",
       "\n",
@@ -560,14 +677,14 @@
       "\n",
       "K-Neighbors Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 5.7077\n",
-      "- Mean Absolute Error: 4.5167\n",
-      "- R2 Score: 0.8555\n",
+      "- Root Mean Squared Error: 5.7091\n",
+      "- Mean Absolute Error: 4.5175\n",
+      "- R2 Score: 0.8554\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 7.2530\n",
-      "- Mean Absolute Error: 5.6210\n",
-      "- R2 Score: 0.7838\n",
+      "- Root Mean Squared Error: 7.2583\n",
+      "- Mean Absolute Error: 5.6370\n",
+      "- R2 Score: 0.7835\n",
       "===================================\n",
       "\n",
       "\n",
@@ -578,22 +695,22 @@
       "- R2 Score: 0.9997\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 7.6371\n",
-      "- Mean Absolute Error: 6.0250\n",
-      "- R2 Score: 0.7603\n",
+      "- Root Mean Squared Error: 8.0190\n",
+      "- Mean Absolute Error: 6.3350\n",
+      "- R2 Score: 0.7357\n",
       "===================================\n",
       "\n",
       "\n",
       "Random Forest Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 2.2851\n",
-      "- Mean Absolute Error: 1.8253\n",
-      "- R2 Score: 0.9768\n",
+      "- Root Mean Squared Error: 2.2914\n",
+      "- Mean Absolute Error: 1.8227\n",
+      "- R2 Score: 0.9767\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 6.0959\n",
-      "- Mean Absolute Error: 4.7194\n",
-      "- R2 Score: 0.8473\n",
+      "- Root Mean Squared Error: 5.9131\n",
+      "- Mean Absolute Error: 4.5937\n",
+      "- R2 Score: 0.8563\n",
       "===================================\n",
       "\n",
       "\n",
@@ -625,14 +742,14 @@
       "\n",
       "AdaBoost Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 5.7843\n",
-      "- Mean Absolute Error: 4.7564\n",
-      "- R2 Score: 0.8516\n",
+      "- Root Mean Squared Error: 5.7452\n",
+      "- Mean Absolute Error: 4.6933\n",
+      "- R2 Score: 0.8536\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 6.0447\n",
-      "- Mean Absolute Error: 4.6813\n",
-      "- R2 Score: 0.8498\n",
+      "- Root Mean Squared Error: 5.9752\n",
+      "- Mean Absolute Error: 4.6588\n",
+      "- R2 Score: 0.8533\n",
       "===================================\n",
       "\n",
       "\n"
